--- a/paper/paper7/paper7-appendix.tex
+++ b/paper/paper7/paper7-appendix.tex
@@ -1929,7 +1929,7 @@ If \emph{dcterms:date} and one of its sub-properties \emph{dcterms:created} or \
 In most library applications, cardinality shortcuts tend to appear in pairs, with repeatable/non-repeatable establishing maximum cardinality and optional/mandatory establishing minimum cardinality.
 These are shortcuts for more detailed \emph{cardinality restrictions}.
 
-\subsection{Aggregation\textsuperscript{C}}
+\subsection{Aggregations\textsuperscript{C}}
 
 Some constraints require aggregating multiple values, especially via \emph{COUNT}, \emph{MIN} and \emph{MAX}.
 
